# smart-whisper-transcribe

./: .gitignore  Dockerfile  Dockerfile.arm  README.md  fw_transcribe.py  main.py  pyproject.toml  requirements.txt  smart_transcribe.py
transcribe-task-mgr/: .gitignore  README.md  go.mod  main.go
