[project]
name = "fast-whisper-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.0",
    "mlx-whisper>=0.4.0 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "psutil>=5.9.0",
]
