[project]
name = "smart-whisper-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.0",
    "mlx-whisper>=0.4.0 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "psutil>=5.9.0",
]

[project.scripts]
smart-transcribe = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "smart_transcribe"]
